--- a/app/views/patrons/edit.html.erb
+++ b/app/views/patrons/edit.html.erb
@@ -9,7 +9,7 @@
   <ul>
     <li><%= link_to t('page.show'), @patron -%></li>
     <%- if can? :destroy, @patron -%>
-      <li><%= link_to t('page.destroy'), @patron, :confirm => t('page.are_you_sure'), :method => :delete -%></li>
+      <li><%= link_to t('page.destroy'), @patron, :data => {:confirm => t('page.are_you_sure')}, :method => :delete -%></li>
     <%- end -%>
     <li><%= link_to t('page.back'), patrons_path -%></li>
   </ul>
