--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -41,6 +41,6 @@
       <li><%= link_to t('page.listing', :model => t('activerecord.models.message')), user_messages_path(current_user) -%></li>
     <% end %>
     <li><%= link_to t('message.reply'), new_user_message_path(current_user, :parent_id => @message.id) -%></li>
-    <li><%= link_to t('page.destroy'), @message, :confirm => t('page.are_you_sure'), :method => :delete -%></li>
+    <li><%= link_to t('page.destroy'), @message, :data => {:confirm => t('page.are_you_sure')}, :method => :delete -%></li>
   </ul>
 </div>
