--- a/app/views/patrons/_index_work.html.erb
+++ b/app/views/patrons/_index_work.html.erb
@@ -41,7 +41,7 @@
           <%- if params[:mode] == 'add' -%>
             <%= link_to t('page.add'), new_work_create_path(work, :patron_id => patron.id) unless work.creators.include?(patron) -%>
           <%- else -%>
-            <%= link_to t('page.destroy'), work_create_path(work, work.created(patron)), :confirm => t('page.are_you_sure'), :method => :delete -%>
+            <%= link_to t('page.destroy'), work_create_path(work, work.created(patron)), :data => {:confirm => t('page.are_you_sure')}, :method => :delete -%>
           <%- end -%>
         <%- end -%>
       </td>
