--- a/app/views/purchase_requests/show.html.erb
+++ b/app/views/purchase_requests/show.html.erb
@@ -77,7 +77,7 @@
 <div id="submenu" class="ui-corner-all">
   <ul>
     <%- if @purchase_request.order_list -%>
-      <li><%= link_to t('purchase_request.remove_from_order_list'), order_list_order_path(@purchase_request.order_list, @purchase_request.order), :method => :delete, :confirm => t('page.are_you_sure') -%></li>
+      <li><%= link_to t('purchase_request.remove_from_order_list'), order_list_order_path(@purchase_request.order_list, @purchase_request.order), :method => :delete, :data => {:confirm => t('page.are_you_sure')} -%></li>
     <%- else -%>
       <li><%= link_to t('purchase_request.add_to_order_list'), new_purchase_request_order_path(@purchase_request) -%></li>
     <%- end -%>
@@ -86,7 +86,7 @@
     <%- end -%>
     <li><%= link_to t('page.edit'), edit_user_purchase_request_path(@purchase_request.user, @purchase_request) -%></li>
     <%- if current_user.has_role?('Librarian') -%>
-      <li><%= link_to t('page.destroy'), user_purchase_request_path(@purchase_request.user, @purchase_request), :confirm => t('page.are_you_sure'), :method => :delete -%></li>
+      <li><%= link_to t('page.destroy'), user_purchase_request_path(@purchase_request.user, @purchase_request), :data => {:confirm => t('page.are_you_sure')}, :method => :delete -%></li>
     <%- end -%>
     <li><%= link_to t('page.back'), user_purchase_requests_path(@purchase_request.user, :page => flash[:page] ||= nil) -%></li>
   </ul>
