--- a/app/views/reserves/show.html.erb
+++ b/app/views/reserves/show.html.erb
@@ -43,9 +43,9 @@
   <ul>
     <li><%= link_to t('page.edit'), edit_user_reserve_path(@reserve.user, @reserve) -%></li>
     <%- if @reserve.user.reserves.waiting.include?(@reserve) -%>
-      <li><%= link_to t('page.cancel'), user_reserve_path(@reserve.user, @reserve, :mode => 'cancel'), :confirm => t('page.are_you_sure'), :method => :put -%></li>
+      <li><%= link_to t('page.cancel'), user_reserve_path(@reserve.user, @reserve, :mode => 'cancel'), :data => {:confirm => t('page.are_you_sure')}, :method => :put -%></li>
     <%- else -%>
-      <li><%= link_to t('page.destroy'), user_reserve_path(@reserve.user, @reserve), :confirm => t('page.are_you_sure'), :method => :delete -%></li>
+      <li><%= link_to t('page.destroy'), user_reserve_path(@reserve.user, @reserve), :data => {:confirm => t('page.are_you_sure')}, :method => :delete -%></li>
     <%- end -%>
     <li><%= link_to t('page.back'), user_reserves_path(@reserve.user) -%></li>
   </ul>
