--- a/app/views/manifestations/_list.html.erb
+++ b/app/views/manifestations/_list.html.erb
@@ -2,7 +2,7 @@
   <%= render manifestations %>
 </table>
 
-<%= will_paginate(manifestations) -%>
+<%= paginate(manifestations) -%>
 <br />
 
 <div>
