--- a/app/views/patrons/_expression_list.html.erb
+++ b/app/views/patrons/_expression_list.html.erb
@@ -1,5 +1,5 @@
 <div id="expression">
-  <%= will_paginate(@expressions, :param_name => :expression_list_page, :class => 'content_pagination digg_pagination') -%>
+  <%= paginate(@expressions, :param_name => :expression_list_page, :class => 'content_pagination digg_pagination') -%>
   <ul>
     <%- @expressions.each do |manifestation| -%>
       <li>
@@ -15,6 +15,6 @@
       </li>
     <%- end -%>
   </ul>
-  <%= will_paginate(@expressions, :param_name => :expression_list_page, :class => 'content_pagination digg_pagination') -%>
+  <%= paginate(@expressions, :param_name => :expression_list_page, :class => 'content_pagination digg_pagination') -%>
 </div>
 
