--- a/app/views/patrons/_manifestation_list.html.erb
+++ b/app/views/patrons/_manifestation_list.html.erb
@@ -1,5 +1,5 @@
 <div id="manifestation">
-  <%= will_paginate(@manifestations, :param_name => :manifestation_list_page, :class => 'content_pagination digg_pagination') -%>
+  <%= paginate(@manifestations, :param_name => :manifestation_list_page, :class => 'content_pagination digg_pagination') -%>
   <ul>
     <%- @manifestations.each do |manifestation| -%>
       <li>
@@ -15,5 +15,5 @@
       </li>
     <%- end -%>
   </ul>
-  <%= will_paginate(@manifestations, :param_name => :manifestation_list_page, :class => 'content_pagination digg_pagination') -%>
+  <%= paginate(@manifestations, :param_name => :manifestation_list_page, :class => 'content_pagination digg_pagination') -%>
 </div>
