--- a/app/views/patrons/index.mobile.erb
+++ b/app/views/patrons/index.mobile.erb
@@ -20,4 +20,4 @@
   <%- end -%>
 </ul>
 
-<%= will_paginate(@patrons, :renderer => WillPaginateJqueryMobileRenderer) %>
+<%= paginate(@patrons, :renderer => WillPaginateJqueryMobileRenderer) %>
