moved asset files

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,8 @@
  *= require pagination
  *= require portlets
  *= require event_calendar
- *= require vendor
+ *= require jquery.ui.all
+ *= require fg.menu
+ *= require fg.menu.button
  *= require jquery.qtip
 */
