added classification_facet template file

--- a/app/views/manifestations/_show_detail_librarian.html.erb
+++ b/app/views/manifestations/_show_detail_librarian.html.erb
@@ -73,6 +73,10 @@
               <%- end -%>
             </td>
           </tr>
+          <tr>
+            <td><%= t('activerecord.attributes.classification.category') %></td>
+            <td></td>
+          </tr>
         <% end %>
         <% if defined?(EnjuBookmark) %>
           <tr>
