--- a/app/views/manifestations/_tab_menu.html.erb
+++ b/app/views/manifestations/_tab_menu.html.erb
@@ -1,4 +1,4 @@
-<ul>
+<ul class="hidden">
   <li class="selected"><a href="#detail"><em><%= t('page.detail') -%></em></a></li>
   <%- if manifestation.original_manifestations.exists? or manifestation.derived_manifestations.exists? -%>
     <li><a href="#related_manifestation"><em><%= t('page.related_manifestation') -%> (<%= manifestation.original_manifestations.size + manifestation.derived_manifestations.size -%>)</em></a></li>
