--- a/app/views/page/_footer.html.erb
+++ b/app/views/page/_footer.html.erb
@@ -1,14 +1,14 @@
 <div class="header_and_footer">
   <div id="footer">
-    <a href="https://github.com/nabeta/enju_leaf/wiki">Next-L Enju Leaf</a>
-     + <a href="https://github.com/next-l/enju_flower/">Next-L Enju Flower <%= EnjuFlower::VERSION %></a>,
-    <%= t('page.open_source_integrated_library_system') -%> |
+    <a href="https://github.com/nabeta/enju_leaf/">Next-L Enju Leaf <%= EnjuLeaf::VERSION %></a>
+    + <a href="https://github.com/next-l/enju_flower/">Next-L Enju Flower <%= EnjuFlower::VERSION %></a>,
+    <%= t('page.open_source_integrated_library_system') -%>
+    <br />
+    Developed by <a href="http://mwr.mediacom.keio.ac.jp/~tanabe/">Kosuke Tanabe</a> and <a href="http://www.next-l.jp/">Project Next-L</a> | 
     <%= link_to t('page.about_this_system'), page_about_path -%> |
     <%= link_to t('page.report_bugs'), "https://github.com/nabeta/enju_leaf/issues" -%>
     <% if is_mobile_request? %>
       | <%= link_to t('page.mobile_view'), url_for(:mobile_view => 'true') %>
     <% end %>
-    <br />
-    Developed by <a href="http://mwr.mediacom.keio.ac.jp/~tanabe/">Kosuke Tanabe</a> and <a href="http://www.next-l.jp/">Project Next-L</a>.
   </div>
 </div>
