--- a/app/views/manifestations/_show_detail_librarian.html.erb
+++ b/app/views/manifestations/_show_detail_librarian.html.erb
@@ -74,7 +74,7 @@
             </td>
           </tr>
           <tr>
-            <td><%= t('activerecord.attributes.classification.category') %></td>
+            <td><%= t('activerecord.attributes.classification.category') %>:</td>
             <td></td>
           </tr>
         <% end %>
