updated dummy migration file

--- a/app/views/page/_footer.html.erb
+++ b/app/views/page/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="header_and_footer">
   <div id="footer">
-    <a href="https://github.com/nabeta/enju_leaf/">Next-L Enju Leaf <%= EnjuLeaf::VERSION %></a>
-    + <a href="https://github.com/next-l/enju_flower/">Next-L Enju Flower <%= EnjuFlower::VERSION %></a>,
+    <a href="https://github.com/nabeta/enju_leaf">Next-L Enju Leaf <%= EnjuLeaf::VERSION %></a>
+    + <a href="https://github.com/next-l/enju_flower">Next-L Enju Flower <%= EnjuFlower::VERSION %></a>,
     <%= t('page.open_source_integrated_library_system') -%>
     <br />
     Developed by <a href="http://mwr.mediacom.keio.ac.jp/~tanabe/">Kosuke Tanabe</a> and <a href="http://www.next-l.jp/">Project Next-L</a> | 
