updated template files

--- a/app/views/manifestations/_call_number.html.erb
+++ b/app/views/manifestations/_call_number.html.erb
@@ -5,7 +5,9 @@
       <br />
       <%= link_to item.shelf.display_name.localize, library_shelf_path(item.shelf.library, item.shelf) -%>
       <br />
-      <%= item.circulation_status.display_name.localize if item.circulation_status -%>
+      <% if defined?(EnjuCirculation) %>
+        <%= item.circulation_status.display_name.localize if item.circulation_status -%>
+      <% end %>
 
     </td>
     <td class="call_number_table">
