--- a/app/views/manifestations/_show_detail_user.html.erb
+++ b/app/views/manifestations/_show_detail_user.html.erb
@@ -10,11 +10,15 @@
             <td style="width: 500px"><%= manifestation.title_alternative -%></td>
           </tr>
         <% end %>
-        <%- if manifestation.series_statement -%>
+        <%- if manifestation.series_statements.exists? -%>
           <tr>
             <td style="width: 200px"><%= t('activerecord.models.series_statement') -%>:</td>
             <td style="width: 500px">
-              <%= link_to manifestation.series_statement.original_title, manifestation.series_statement -%>
+              <ul>
+                <% manifestation.series_statements.each do |series_statement| %>
+                  <li><%= link_to series_statement.original_title, series_statement -%></li>
+                <% end %>
+              </ul>
               <%= manifestation.volume_number_string %>
               <%- if manifestation.issn.present? -%>
                 (<%= t('activerecord.attributes.manifestation.issn') -%>: <%= manifestation.issn -%>)
