--- a/app/views/manifestations/show.html.erb
+++ b/app/views/manifestations/show.html.erb
@@ -90,7 +90,7 @@
               <li><%= link_to t('manifestation.edit_contributor'), expression_patrons_path(@manifestation) -%></li>
               <li><%= link_to t('manifestation.edit_publisher'), manifestation_patrons_path(@manifestation) -%></li>
               <%- if @manifestation.periodical? -%>
-                <li><%= link_to t('manifestation.add_next_issue'), new_series_statement_manifestation_path(@manifestation.series_statement) if @manifestation.series_statement -%></li>
+                <li><%= link_to t('manifestation.add_next_issue'), new_series_statement_manifestation_path(@manifestation.root_series_statement) if @manifestation.root_series_statement -%></li>
               <%- end -%>
             </ul>
           </li>
