--- a/app/views/manifestations/_manifestation.html.erb
+++ b/app/views/manifestations/_manifestation.html.erb
@@ -2,23 +2,23 @@
           <td style="width: 30px"><%= @manifestations.offset_value + 1 + manifestation_counter -%></td>
           <% cache([:manifestation => manifestation.id, :fragment => 'manifestation_html', :role => current_user_role_name, :locale => @locale]) do %>
             <td style="480px">
-              <% if manifestation.root_of_series? %>
+              <% if manifestation.root_series_statement %>
                 <%= render 'manifestations/show_series_index', :manifestation => manifestation, :series_statement => manifestation.root_series_statement -%>
               <% else %>
-                  <%= render 'manifestations/show_index', :manifestation => manifestation -%>
-                  <div class="access_address">
-                    <%= link_to manifestation.access_address, manifestation.access_address if manifestation.access_address.present? -%>
-                  </div>
-                  <%- unless manifestation.items.on_shelf.empty? -%>
-                    (<%= link_to_function t('page.holding'), "$('#holding_#{manifestation.id}').toggle()" -%>)
+                <%= render 'manifestations/show_index', :manifestation => manifestation -%>
+                <div class="access_address">
+                  <%= link_to manifestation.access_address, manifestation.access_address if manifestation.access_address.present? -%>
+                </div>
+                <%- unless manifestation.items.on_shelf.empty? -%>
+                  (<%= link_to_function t('page.holding'), "$('#holding_#{manifestation.id}').toggle()" -%>)
+                <%- end -%>
+                <% if defined?(EnjuBookmark) %>
+                  <%- if manifestation.tags.first -%>
+                    (<%= link_to_function t('activerecord.models.tag'), "$('#tag_#{manifestation.id}').toggle()" -%>)
                   <%- end -%>
-                  <% if defined?(EnjuBookmark) %>
-                    <%- if manifestation.tags.first -%>
-                      (<%= link_to_function t('activerecord.models.tag'), "$('#tag_#{manifestation.id}').toggle()" -%>)
-                    <%- end -%>
-                    <%= render 'manifestations/show_tag', :manifestation => manifestation -%>
-                  <% end %>
-                  <%= render 'manifestations/holding', :manifestation => manifestation -%>
+                  <%= render 'manifestations/show_tag', :manifestation => manifestation -%>
+                <% end %>
+                <%= render 'manifestations/holding', :manifestation => manifestation -%>
               <% end %>
             </td>
             <% if signed_in? %>
@@ -41,7 +41,7 @@
                     <%= link_to image_tag('icons/book_edit.png', :size => '16x16', :alt => t('page.edit')), edit_manifestation_path(manifestation) -%>
                     <% if @series_statement %>
                       <% if manifestation.root_series_statement == @series_statement %>
-                        <%= link_to t('page.destroy'), series_statement_series_has_manifestation_path(manifestation.root_series_statement, manifestation.series_has_manifestation), :data => {:confirm => t('page.are_you_sure')}, :method => :delete -%>
+                        <%= link_to t('page.destroy'), series_statement_series_has_manifestation_path(manifestation.root_series_statement, manifestation.series_has_manifestations.where(:series_statement_id => manifestation.root_series_statement.id).first), :data => {:confirm => t('page.are_you_sure')}, :method => :delete -%>
                       <% end %>
                     <% end %>
                   <% else %>
@@ -61,7 +61,7 @@
                     <% when @item %>
                       <%= link_to t('page.change'), edit_exemplify_path(@item.exemplify, :manifestation_id => manifestation.id) unless @item.manifestation == manifestation -%>
                     <% else %>
-                      <%= link_to image_tag('icons/arrow_divide.png', :size => '16x16', :alt => t('manifestation.add_derivation')), manifestation_manifestations_path(manifestation, :mode => 'add') -%>
+                      <%= link_to image_tag('icons/arrow_divide.png', :size => '16x16', :alt => t('manifestation.add_derivation')), new_manifestation_path(:parent_id => manifestation.id) -%>
                     <% end %>
                   <%- end -%>
                 <%- end -%>
