--- a/app/views/manifestations/_show_detail_librarian.html.erb
+++ b/app/views/manifestations/_show_detail_librarian.html.erb
@@ -16,7 +16,11 @@
             <td style="width: 500px">
               <ul>
                 <% manifestation.series_statements.each do |series_statement| %>
-                  <li><%= link_to series_statement.original_title, series_statement -%></li>
+                  <% if series_statement.root_manifestation %>
+                    <li><%= link_to series_statement.original_title, series_statement.root_manifestation -%></li>
+                  <% else %>
+                    <li><%= series_statement.original_title -%></li>
+                  <% end %>
                 <% end %>
               </ul>
               <%= manifestation.volume_number_string %>
