--- a/app/views/manifestations/_show_periodical_master.html.erb
+++ b/app/views/manifestations/_show_periodical_master.html.erb
@@ -1,40 +1,23 @@
-<%= render 'manifestations/title', :manifestation => @manifestation.series_statement.root_manifestation -%>
+<%= render 'manifestations/title', :manifestation => @manifestation.root_series_statement.manifestation -%>
 
 <p>
   <strong><%= t('activerecord.attributes.series_statement.original_title') -%></strong>
-  <%= @manifestation.series_statement.original_title %>
+  <%= @manifestation.root_series_statement.original_title %>
 </p>
 
 <p>
   <strong><%= t('activerecord.attributes.series_statement.title_transcription') -%></strong>
-  <%= @manifestation.series_statement.title_transcription %>
+  <%= @manifestation.root_series_statement.title_transcription %>
 </p>
 
 <p>
   <strong><%= t('activerecord.attributes.series_statement.issn') -%></strong>
-  <%= @manifestation.series_statement.issn %>
+  <%= @manifestation.root_series_statement.issn %>
 </p>
-
-<!--
-<p>
-  <strong><%= t('activerecord.attributes.series_statement.numbering') -%></strong>
-  <%= @manifestation.series_statement.numbering %>
-</p>
-
-<p>
-  <strong><%= t('activerecord.attributes.series_statement.title_subseries') -%></strong>
-  <%= @manifestation.series_statement.title_subseries %>
-</p>
-
-<p>
-  <strong><%= t('activerecord.attributes.series_statement.numbering_subseries') -%></strong>
-  <%= @manifestation.series_statement.numbering_subseries %>
-</p>
--->
 
 <p>
   <strong><%= t('activerecord.attributes.series_statement.series_statement_identifier') -%></strong>
-  <%= @manifestation.series_statement.series_statement_identifier %>
+  <%= @manifestation.root_series_statement.series_statement_identifier %>
 </p>
 
-<%= render 'series_statements/manifestation_list', :series_statement => @manifestation.series_statement -%>
+<%= render 'series_statements/manifestation_list', :series_statement => @manifestation.root_series_statement -%>
