--- a/app/views/manifestations/_show_detail_user.html.erb
+++ b/app/views/manifestations/_show_detail_user.html.erb
@@ -16,13 +16,19 @@
             <td style="width: 500px">
               <ul>
                 <% manifestation.series_statements.each do |series_statement| %>
-                  <li><%= link_to series_statement.original_title, series_statement -%></li>
+                  <% if series_statement.root_manifestation %>
+                    <li>
+                      <%= link_to series_statement.original_title, series_statement.root_manifestation -%>
+                      <%= series_statement.volume_number_string %>
+                    </li>
+                  <% else %>
+                    <li>
+                      <%= series_statement.original_title -%>
+                      <%= series_statement.volume_number_string %>
+                    </li>
+                  <% end %>
                 <% end %>
               </ul>
-              <%= manifestation.volume_number_string %>
-              <%- if manifestation.issn.present? -%>
-                (<%= t('activerecord.attributes.manifestation.issn') -%>: <%= manifestation.issn -%>)
-              <%- end -%>
             </td>
           </tr>
         <% end %>
