--- a/app/views/manifestations/_show_detail_librarian.html.erb
+++ b/app/views/manifestations/_show_detail_librarian.html.erb
@@ -15,18 +15,16 @@
             <td style="width: 200px"><%= t('activerecord.models.series_statement') -%>:</td>
             <td style="width: 500px">
               <ul>
+                <% manifestation.original_manifestations.each do |m| %>
+                  <li>
+                    <%= link_to m.original_title, m if m.root_series_statement %>
+                  </li>
+                <% end %>
                 <% manifestation.series_statements.each do |series_statement| %>
-                  <% if series_statement.root_manifestation %>
-                    <li>
-                      <%= link_to series_statement.original_title, series_statement.root_manifestation -%>
-                      <%= series_statement.volume_number_string %>
-                    </li>
-                  <% else %>
-                    <li>
-                      <%= series_statement.original_title -%>
-                      <%= series_statement.volume_number_string %>
-                    </li>
-                  <% end %>
+                  <li>
+                    <%= series_statement.original_title %>
+                    <%= series_statement.volume_number_string %>
+                  </li>
                 <% end %>
               </ul>
               <%= manifestation.volume_number_string %>
