--- a/app/views/manifestations/_manifestation.html.erb
+++ b/app/views/manifestations/_manifestation.html.erb
@@ -41,18 +41,8 @@
                     <%= link_to image_tag('icons/book_edit.png', :size => '16x16', :alt => t('page.edit')), edit_manifestation_path(manifestation) -%>
                   <% else %>
                     <% case %>
-                    <% when @index_patron[:creator] %>
-                      <%= link_to t('page.add'), new_patron_create_path(@index_patron[:creator], :work_id => manifestation.id) unless manifestation.creators.include?(@index_patron[:creator]) -%>
-                    <% when @index_patron[:contributor] %>
-                      <%= link_to t('page.add'), new_patron_realize_path(@index_patron[:contributor], :expression_id => manifestation.id) unless manifestation.contributors.include?(@index_patron[:contributor]) -%>
-                    <% when @index_patron[:publisher] %>
-                      <%= link_to t('page.add'), new_patron_produce_path(@index_patron[:publisher], :manifestation_id => manifestation.id) unless manifestation.publishers.include?(@index_patron[:publisher]) -%>
-                    <% when @series_statement %>
-                      <% unless manifestation.series_statements.exists? -%>
-                        <%= link_to t('page.add'), new_series_has_manifestation_path(:series_statement_id => @series_statement.id, :manifestation_id => manifestation.id) -%>
-                      <% end %>
-                    <% when @manifestation %>
-                      <%= link_to t('page.add'), new_manifestation_manifestation_relationship_path(@manifestation, :child_id => manifestation.id) unless @manifestation.derived_manifestations.include?(manifestation) or @manifestation == manifestation -%>
+                    <% when @parent %>
+                      <%= link_to t('page.add'), new_manifestation_manifestation_relationship_path(@parent, :child_id => manifestation.id) unless @parent.derived_manifestations.include?(manifestation) or @parent == manifestation -%>
                     <% when @item %>
                       <%= link_to t('page.change'), edit_exemplify_path(@item.exemplify, :manifestation_id => manifestation.id) unless @item.manifestation == manifestation -%>
                     <% else %>
