--- a/app/views/manifestations/_show_detail_user.html.erb
+++ b/app/views/manifestations/_show_detail_user.html.erb
@@ -10,28 +10,15 @@
             <td style="width: 500px"><%= manifestation.title_alternative -%></td>
           </tr>
         <% end %>
-        <%- if manifestation.series_statements.exists? -%>
           <tr>
             <td style="width: 200px"><%= t('activerecord.models.series_statement') -%>:</td>
             <td style="width: 500px">
-              <ul>
-                <% manifestation.series_statements.each do |series_statement| %>
-                  <% if series_statement.root_manifestation %>
-                    <li>
-                      <%= link_to series_statement.original_title, series_statement.root_manifestation -%>
-                      <%= series_statement.volume_number_string %>
-                    </li>
-                  <% else %>
-                    <li>
-                      <%= series_statement.original_title -%>
-                      <%= series_statement.volume_number_string %>
-                    </li>
-                  <% end %>
-                <% end %>
-              </ul>
+              <%= render 'show_series_detail', :manifestation => manifestation %>
+              <%- if manifestation.issn.present? -%>
+                (<%= t('activerecord.attributes.manifestation.issn') -%>: <%= manifestation.issn -%>)
+              <%- end -%>
             </td>
           </tr>
-        <% end %>
         <%= render 'edition_and_number', :manifestation => manifestation %>
         <tr>
           <td style="width: 200px"><%= t('page.form') -%>:</td>
@@ -64,16 +51,8 @@
           </tr>
         <% end %>
         <% if defined?(EnjuSubject) %>
-          <%- unless manifestation.subjects.empty? -%>
-            <tr>
-              <td><%= t('activerecord.models.subject') -%>:</td>
-              <td>
-                <%- manifestation.subjects.each do |subject| -%>
-                  <%= link_to subject.term, subject -%>
-                <%- end -%>
-              </td>
-            </tr>
-          <%- end -%>
+          <%= render 'manifestations/subject_detail', :manifestation => manifestation %>
+          <%= render 'manifestations/classification_detail', :manifestation => manifestation %>
         <% end %>
         <% if defined?(EnjuBookmark) %>
           <tr>
