--- a/app/views/manifestations/_title.mobile.erb
+++ b/app/views/manifestations/_title.mobile.erb
@@ -5,6 +5,7 @@
     <%= link_to form_icon(manifestation.carrier_type), manifestation -%>
   </h2>
   <p>
+    <%= manifestation.statement_of_responsibility %><br />
     <%- unless manifestation.creators.readable_by(current_user).empty? -%>
       <%= t('patron.creator') -%>: <%= patrons_list(manifestation.creators.readable_by(current_user), :itemprop => 'author') -%>
     <%- end -%>
