--- a/app/views/manifestations/_index_form_publisher.html.erb
+++ b/app/views/manifestations/_index_form_publisher.html.erb
@@ -1,5 +1,5 @@
 <div class="search_form">
-<%= form_for :manifestations, :url => publisher_manifestations_path(@index_patron[:publisher]), :html => {:method => 'get'} do -%>
+<%= form_for :manifestations, :url => publisher_manifestations_path(@index_agent[:publisher]), :html => {:method => 'get'} do -%>
   <p>
     <%= label_tag :search_form_top, t('page.search_term') -%>:
     <%= search_field_tag 'query', h(@query), {:id => 'search_form_top', :class => 'search_form', :placeholder => t('page.search_term')} -%>
