--- a/app/views/manifestations/_title.mobile.erb
+++ b/app/views/manifestations/_title.mobile.erb
@@ -7,13 +7,13 @@
   <p>
     <%= manifestation.statement_of_responsibility %><br />
     <%- unless manifestation.creators.readable_by(current_user).empty? -%>
-      <%= t('patron.creator') -%>: <%= patrons_list(manifestation.creators.readable_by(current_user), :itemprop => 'author') -%>
+      <%= t('agent.creator') -%>: <%= agents_list(manifestation.creators.readable_by(current_user), :itemprop => 'author') -%>
     <%- end -%>
     <%- unless manifestation.contributors.readable_by(current_user).empty? -%>
-      <%= t('patron.contributor') -%>: <%= patrons_list(manifestation.contributors.readable_by(current_user), :itemprop => 'editor') -%>
+      <%= t('agent.contributor') -%>: <%= agents_list(manifestation.contributors.readable_by(current_user), :itemprop => 'editor') -%>
     <%- end -%>
     <%- unless manifestation.publishers.readable_by(current_user).empty? -%>
-      <%= t('patron.publisher') -%>: <%= patrons_list(manifestation.publishers.readable_by(current_user), :itemprop => 'publisher') -%>
+      <%= t('agent.publisher') -%>: <%= agents_list(manifestation.publishers.readable_by(current_user), :itemprop => 'publisher') -%>
     <% end %>
     <%- if manifestation.date_of_publication? -%>
       <meta itemprop="publishDate" content="<%= manifestation.date_of_publication.iso8601 %>" />
