--- a/app/views/manifestations/index.html.erb
+++ b/app/views/manifestations/index.html.erb
@@ -4,11 +4,11 @@
   <%= render 'manifestations/title', :manifestation => @manifestation if @manifestation -%>
 
   <% case %>
-  <% when @index_patron[:creator] %>
+  <% when @index_agent[:creator] %>
     <%= render 'index_form_creator' %>
-  <% when @index_patron[:contributor] %>
+  <% when @index_agent[:contributor] %>
     <%= render 'index_form_contributor' %>
-  <% when @index_patron[:publisher] %>
+  <% when @index_agent[:publisher] %>
     <%= render 'index_form_publisher' %>
   <% when @manifestation %>
     <%= render 'index_form_manifestation' %>
