--- a/app/views/manifestations/_show_holding.html.erb
+++ b/app/views/manifestations/_show_holding.html.erb
@@ -34,7 +34,7 @@
           <%- if item.rent? -%>
             (
               <%= t('activerecord.attributes.checkout.due_date') -%>:
-              <%= l(item.checkouts.first.due_date, :format => :short) -%>
+              <%= l(item.latest_checkout.due_date, :format => :short) -%>
             )
           <%- end -%>
         </td>
