--- a/app/views/manifestations/_show_holding.mobile.erb
+++ b/app/views/manifestations/_show_holding.mobile.erb
@@ -29,7 +29,7 @@
         <%- if item.rent? -%>
           (
             <%= t('activerecord.attributes.checkout.due_date') -%>:
-            <%= l(item.checkouts.first.due_date, :format => :short) -%>
+            <%= l(item.last_checkout.due_date, :format => :short) -%>
           )
         <%- end -%>
       </td>
