--- a/app/views/manifestations/_pickup.html.erb
+++ b/app/views/manifestations/_pickup.html.erb
@@ -1,5 +1,5 @@
 <% if manifestation %>
-  <% cache([:manifestation => manifestation.id, :fragment => 'pickup_html', :role => current_user_role_name, :locale => @locale]) do %>
+  <% cache([current_user_role_name, @locale, manifestation]) do %>
     <div id="pickup_book_jacket">
       <%= book_jacket(manifestation) -%>
     </div>
