changed cache block

--- a/app/views/manifestations/_manifestation.html.erb
+++ b/app/views/manifestations/_manifestation.html.erb
@@ -1,7 +1,7 @@
         <tr class="line<%= cycle("0", "1") -%>">
           <td style="width: 30px"><%= @manifestations.offset_value + 1 + manifestation_counter -%></td>
-          <% cache([current_user_role_name, @locale, manifestation]) do %>
-            <td style="480px">
+          <td style="480px">
+            <% cache([current_user_role_name, @locale, manifestation]) do %>
               <% if manifestation.root_series_statement %>
                 <%= render 'manifestations/show_series_index', :manifestation => manifestation, :series_statement => manifestation.root_series_statement -%>
               <% else %>
@@ -18,9 +18,10 @@
                   <%- end -%>
                   <%= render 'manifestations/show_tag', :manifestation => manifestation -%>
                 <% end %>
-                <%= render 'manifestations/holding', :manifestation => manifestation -%>
               <% end %>
-            </td>
+              <%= render 'manifestations/holding', :manifestation => manifestation -%>
+            <% end %>
+          </td>
             <% if signed_in? %>
               <td id="edit_icons">
                 <% if defined?(EnjuCirculation) %>
