updated dummy files

--- a/app/views/manifestations/_list.html.erb
+++ b/app/views/manifestations/_list.html.erb
@@ -2,7 +2,7 @@
   <%= render manifestations %>
 </table>
 
-<%= paginate(manifestations) -%>
+<%= paginate(manifestations, :theme => 'enju_leaf') -%>
 <br />
 
 <div>
