add new item link to manifestation pages

--- a/app/views/manifestations/_show_holding.html.erb
+++ b/app/views/manifestations/_show_holding.html.erb
@@ -57,4 +57,7 @@
     <% end %>
   <%- end -%>
 </table>
+<%- if can? :create, Item -%>
+<p><%= link_to t('page.new', :model => t('activerecord.models.item')), new_manifestation_item_path(manifestation) -%></p>
+<%- end -%>
 </div>
