added ui-widget-content class

--- a/app/views/manifestations/show.html.erb
+++ b/app/views/manifestations/show.html.erb
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<div id="submenu" class="ui-corner-all">
+<div id="submenu" class="ui-corner-all ui-widget-content">
   <%= render 'manifestations/book_jacket', :manifestation => @manifestation -%>
   <ul>
     <%- if @manifestation.picture_files.exists? -%>
