--- a/app/views/manifestations/index.html.erb
+++ b/app/views/manifestations/index.html.erb
@@ -1,4 +1,4 @@
-<div id="content_detail" class="ui-corner-all">
+<div id="content_detail" class="ui-corner-all ui-widget-content">
 <h1 class="title"><%= t('page.search_resource', :model => t('page.resource')) -%></h1>
 <div id="content_list">
   <%= render 'manifestations/title', :manifestation => @manifestation if @manifestation -%>
@@ -74,7 +74,7 @@
   </div>
 </div>
 
-<div id="submenu" class="ui-corner-all">
+<div id="submenu" class="ui-corner-all ui-widget-content">
   <% if @parent and can?(:update, @parent) %>
     <%= render 'submenu_parent' %>
   <% end %>
