--- a/app/views/manifestations/_manifestation.html.erb
+++ b/app/views/manifestations/_manifestation.html.erb
@@ -10,11 +10,11 @@
                   <%= link_to manifestation.access_address, manifestation.access_address if manifestation.access_address.present? -%>
                 </div>
                 <%- unless manifestation.items.on_shelf.empty? -%>
-                  (<%= link_to_function t('page.holding'), "$('#holding_#{manifestation.id}').toggle()" -%>)
+                  (<%= link_to "#", {:onclick => "$('#holding_#{manifestation.id}').toggle(); return false;"} do t('page.holding') end %>)
                 <%- end -%>
                 <% if defined?(EnjuBookmark) %>
                   <%- if manifestation.tags.first -%>
-                    (<%= link_to_function t('activerecord.models.tag'), "$('#tag_#{manifestation.id}').toggle()" -%>)
+                    (<%= link_to "#", {:onclick => "$('#tag_#{manifestation.id}').toggle(); return false;" } do t('activerecord.models.tag') end %>)
                   <%- end -%>
                   <%= render 'manifestations/show_tag', :manifestation => manifestation -%>
                 <% end %>
