updated template file

--- a/app/views/manifestations/index.mobile.erb
+++ b/app/views/manifestations/index.mobile.erb
@@ -18,4 +18,4 @@
 <% end %>
 </ul>
 
-<%= paginate(@manifestations, :window => 0) %>
+<%= paginate(@manifestations, :window => 0, :theme => 'enju_leaf_mobile') %>
