--- a/app/views/page/_footer.html.erb
+++ b/app/views/page/_footer.html.erb
@@ -1,11 +1,11 @@
 <div class="header_and_footer">
   <div id="footer">
-    <a href="https://github.com/nabeta/enju_leaf">Next-L Enju Leaf <%= EnjuLeaf::VERSION %></a>
+    <a href="https://github.com/next-l/enju_leaf">Next-L Enju Leaf <%= EnjuLeaf::VERSION %></a>
     + <a href="https://github.com/next-l/enju_flower">Next-L Enju Flower <%= EnjuFlower::VERSION %></a>,
     <%= t('page.open_source_integrated_library_system') -%>
     <br />
-    Developed by <a href="http://mwr.mediacom.keio.ac.jp/~tanabe/">Kosuke Tanabe</a> and <a href="http://www.next-l.jp/">Project Next-L</a> | 
-    <%= link_to t('page.report_bugs'), "https://github.com/nabeta/enju_leaf/issues" -%>
+    Developed by <a href="https://github.com/nabeta">Kosuke Tanabe</a> and <a href="http://www.next-l.jp/">Project Next-L</a> | 
+    <%= link_to t('page.report_bugs'), "https://github.com/next-l/enju_leaf/issues" -%>
     <% if browser.mobile? %>
       | <%= link_to t('page.mobile_view'), url_for(:mobile_view => 'true') %>
     <% end %>
