--- a/app/views/manifestations/_attachment_file.html.erb
+++ b/app/views/manifestations/_attachment_file.html.erb
@@ -1,4 +1,4 @@
-<%- if can? :show, manifestation -%>
+<%- if policy(manifestation).show? -%>
   <tr>
     <td><%= t('manifestation.attachment_file') -%>:</td>
     <td><%= link_to manifestation.attachment_file_name, manifestation_path(:format => :download) -%></td>
