--- a/app/views/manifestations/_index_form_item.html.erb
+++ b/app/views/manifestations/_index_form_item.html.erb
@@ -3,7 +3,7 @@
   <p>
     <%= label_tag :search_form_top, t('page.search_term') -%>:
     <%= search_field_tag 'query', h(@query), {:id => 'search_form_top', :class => 'search_form', :placeholder => t('page.search_term')} -%>
-    <% if can? :create, Create %>
+    <% if policy(Create).create? %>
       <%= render 'page/add' %>
     <% end %>
     <%= submit_tag t('page.search') -%>
